# libgltf

./: .appveyor.yml  .clang-format  .coveralls.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  azure-pipelines.yml  libgltf.cppcheck  update_parser_by_scheme.bat  update_parser_by_scheme.sh
.github/: FUNDING.yml
.github/workflows/: build.yml  builddevelop.yml  buildwithdraco.yml  coverage.yml  release.yml
cmake/: FindGoogleDraco.cmake  libgltf-config.cmake.cmakein
doc/: CMakeLists.txt
docs/: CMakeLists.txt  README.md  conf.py  index-chinese.md  index.md  index.rst  usage.md
include/libgltf/: libgltf.h
resource/2.0/: README.md
resource/2.0/Triangle/glTF/: 三角形.gltf
source/: CMakeLists.txt
source/generator/: generator.py
source/libgltf/: CMakeLists.txt  common.cpp  common.h  file_loader.cpp  file_loader.h  gltf_loader.cpp  gltf_loader.h  gltfdata.cpp  gltfdata.h  libgltf-config.cmake  libgltf.cpp  libgltf.h.cmakein  libgltfloader.cpp  libgltfparser.cpp  libgltfparser.h  libgltfpch.h  utility.cpp  utility.h
source/libgltf/extensions/: google_draco.cpp  google_draco.h
source/runtest/: CMakeLists.txt  runtest.cpp  runtest.h
source/structgenerator/: CMakeLists.txt  structgenerator.cpp
tools/: CMakeLists.txt
tools/batch/: CMakeLists.txt  glTF_2.0_schema.ini  update_parser_by_scheme.bat  update_parser_by_scheme.sh
tools/batch/codes/: extension.schema.json.h  extension.schema.json.parser.from.cpp  extension.schema.json.parser.to.cpp  libgltf.header.begin.h  libgltf.header.end.h  libgltf.header.include.h  libgltf.header.namespace.begin.h  libgltf.header.namespace.end.h  libgltf.license.h  libgltf.parser.h
tools/jsonschematoc11/: CMakeLists.txt  __init__.py  __main__.py  jsonschematoc11.py
tools/jsonschematoc11/c11types/: __init__.py  c11type.py  c11typearray.py  c11typebool.py  c11typeinteger.py  c11typemap.py  c11typenone.py  c11typenumber.py  c11typestring.py  c11typestruct.py  c11variable.py
